--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "dev": "tsnd --rs --respawn --transpile-only --ignore-watch node_modules --no-notify src/server.ts"
+    "dev": "tsnd -r tsconfig-paths/register --rs --respawn --transpile-only --ignore-watch node_modules --no-notify src/server.ts"
   },
   "devDependencies": {
     "@types/mongoose": "^5.11.97",
@@ -19,6 +19,7 @@
     "eslint-plugin-prettier": "^4.0.0",
     "prettier": "^2.5.1",
     "ts-node-dev": "^1.1.8",
+    "tsconfig-paths": "^3.12.0",
     "typescript": "^4.5.5"
   },
   "dependencies": {
