--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "dev": "tsnd -r tsconfig-paths/register --rs --respawn --transpile-only --ignore-watch node_modules --no-notify src/server.ts"
+    "dev": "tsnd -r tsconfig-paths/register --rs --respawn --transpile-only --ignore-watch node_modules --no-notify src/server.ts",
+    "start": "ts-node -r tsconfig-paths/register src/server.ts"
   },
   "devDependencies": {
+    "@types/dotenv": "^8.2.0",
     "@types/mongoose": "^5.11.97",
     "@types/node": "^17.0.19",
     "@typescript-eslint/eslint-plugin": "^5.12.1",
@@ -18,14 +20,14 @@
     "eslint-plugin-import": "^2.25.4",
     "eslint-plugin-prettier": "^4.0.0",
     "prettier": "^2.5.1",
-    "ts-node-dev": "^1.1.8",
-    "tsconfig-paths": "^3.12.0",
-    "typescript": "^4.5.5"
+    "ts-node-dev": "^1.1.8"
   },
   "dependencies": {
-    "@types/dotenv": "^8.2.0",
     "dotenv": "^16.0.0",
     "graphql-yoga": "^1.18.3",
-    "mongoose": "^6.2.3"
+    "mongoose": "^6.2.3",
+    "ts-node": "^10.5.0",
+    "tsconfig-paths": "^3.12.0",
+    "typescript": "^4.5.5"
   }
 }
